WIP. Review the code to load the recipes using YAML file
Signed-off-by: Charles Moulliard <cmoulliard@ibm.com>